--- a/tsconfig.json
+++ b/tsconfig.json
@@ -21,7 +21,8 @@
     "paths": {
       "@/*": ["./src/*"],
       "@components/*": ["./src/app/components/*"],
-      "@interfaces/*": ["./src/app/interfaces/*"]
+      "@interfaces/*": ["./src/app/interfaces/*"],
+      "@functions/*" : ["./src/app/functions/*"],
     }
   },
   "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx", ".next/types/**/*.ts"],
